[package]
name = "plotter"
version = "0.1.0"
authors = ["Xavier Gillard <xavier.gillard@uclouvain.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotlib     = "0.5.0"
regex       = "1.3.4"
lazy_static = "1.4.0"
term_size   = "0.3.1"
structopt   = "0.3.8"